feat: add hover effect ($(LC_ALL=en_US.utf8 date +%a", "%b" "%e" "%Y", "%T)).

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -9,6 +9,66 @@
     <title>cssBayan</title>
 </head>
 <body>
+<div class="wrapper">
+    <div class="container">
+        <h1 class="main-title">CSS Bayan</h1>
+        <div class="items-wrapper">
+            <div class="item">
+                <label for="item1">
+                    <input type="radio" class="item-input" name="checked-item" id="item1">
+                    <div class="item-title">You cant just copy and paste CSS
+                        <span class="close-btn">X</span>
+                        <span class="open-btn">+</span>
+                    </div>
 
+                    <img class="item-img" src="https://images.prom.ua/1239818217_enoty-soderzhanie-i.jpg" alt="ENOT">
+                </label>
+            </div>
+
+            <div class="item">
+                <label for="item2">
+                    <input type="radio" class="item-input" name="checked-item"  id="item2">
+                    <div class="item-title">You cant just copy and paste CSS
+                        <span class="close-btn">X</span>
+                        <span class="open-btn">+</span>
+                    </div>
+                    <img class="item-img" src="https://images.prom.ua/1239818217_enoty-soderzhanie-i.jpg" alt="ENOT">
+                </label>
+            </div>
+            <div class="item">
+                <label for="item3">
+                    <input type="radio" class="item-input" name="checked-item"  id="item3">
+                    <div class="item-title">You cant just copy and paste CSS
+                        <span class="close-btn">X</span>
+                        <span class="open-btn">+</span>
+                    </div>
+                    <img class="item-img" src="https://images.prom.ua/1239818217_enoty-soderzhanie-i.jpg" alt="ENOT">
+                </label>
+            </div>
+            <div class="item">
+                <label for="item4">
+                    <input type="radio" class="item-input" name="checked-item"  id="item4">
+                    <div class="item-title">You cant just copy and paste CSS
+                        <span class="close-btn">X</span>
+                        <span class="open-btn">+</span>
+                    </div>
+                    <img class="item-img" src="https://images.prom.ua/1239818217_enoty-soderzhanie-i.jpg" alt="ENOT">
+                </label>
+            </div>
+            <div class="item">
+                <label for="item5">
+                    <input type="radio" class="item-input" name="checked-item"  id="item5">
+                    <div class="item-title">You cant just copy and paste CSS
+                        <span class="close-btn">X</span>
+                        <span class="open-btn">+</span>
+                    </div>
+                    <img class="item-img" src="https://images.prom.ua/1239818217_enoty-soderzhanie-i.jpg" alt="ENOT">
+                </label>
+            </div>
+
+
+        </div>
+    </div>
+</div>
 </body>
 </html>
